<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.HomeActivity">

        <TextView
            android:id="@+id/home_daily_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_5dp"
            android:text="@string/training_fragment_daily_group"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/table_group_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_2dp"
            android:padding="@dimen/default_2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_daily_group"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_table_group_first"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/training_fragment_type_a" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_table_group_second"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/training_fragment_type_b" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_table_group_third"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/training_fragment_type_c" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_table_group_fourth"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/training_fragment_type_d" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.applandeo.materialcalendarview.CalendarView
            android:id="@+id/training_fragment_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_18dp"
            android:elevation="@dimen/default_2dp"
            app:abbreviationsBarColor="#E36E6E"
            app:abbreviationsLabelsColor="@color/white"
            app:daysLabelsColor="@android:color/white"
            app:eventsEnabled="false"
            app:headerColor="#E36E6E"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/table_group_buttons"
            app:pagesColor="#FAA4A4"
            app:selectionColor="@android:color/white"
            app:selectionLabelColor="#3F51B5"
            app:todayLabelColor="#303030"
            app:type="many_days_picker" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/table_group_buttons">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/table_group_buttons">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragment_training_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:clickable="true"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/exercises_item" />

                <Button
                    android:id="@+id/training_fragment_finish_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_10dp"
                    android:layout_marginBottom="@dimen/default_20dp"
                    android:text="Finalizar treino"
                    android:textSize="@dimen/default_12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fragment_training_recycler_view" />

                <ProgressBar
                    android:id="@+id/fragment_training_progress_bar"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_centerInParent="true"
                    android:indeterminate="true"
                    android:indeterminateDrawable="@drawable/progress_bar"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>